--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.0",
     "@mui/material": "^5.6.0",
+    "@types/axios": "^0.14.0",
     "axios": "^0.27.2",
+    "json-server": "^0.17.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^6.3.0",
@@ -35,7 +37,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server -w ./database/db.json -p 8000 "
   },
   "eslintConfig": {
     "extends": [
