--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.0",
+    "@mui/lab": "^5.0.0-alpha.81",
     "@mui/material": "^5.6.0",
     "@types/axios": "^0.14.0",
     "axios": "^0.27.2",
