--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "@mui/icons-material": "^5.6.0",
     "@mui/lab": "^5.0.0-alpha.81",
     "@mui/material": "^5.6.0",
+    "@reduxjs/toolkit": "^1.8.1",
     "@types/axios": "^0.14.0",
+    "@types/react-redux": "^7.1.24",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "json-server": "^0.17.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "redux": "^4.2.0",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
