--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/axios": "^0.14.0",
     "@types/react-redux": "^7.1.24",
     "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "json-server": "^0.17.0",
     "react": "^17.0.0",
