--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.14.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.0",
     "@mui/lab": "^5.0.0-alpha.81",
     "@mui/material": "^5.6.0",
+    "@mui/x-date-pickers": "^5.0.0-alpha.4",
     "@reduxjs/toolkit": "^1.8.1",
     "@types/axios": "^0.14.0",
     "@types/react-redux": "^7.1.24",
